# ruleskit

./: .gitattributes  .gitignore  MANIFEST.in  Makefile  README.md  VERSION.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: pull-request.yml  push.yml
condition/: condition.py  hyperrectanglecondition.py
docs/: activation.html  condition.html  index.html  rule.html  ruleset.html  thresholds.html
docs/utils/: index.html  rfunctions.html  rule_utils.html
rule/: activation.py  condition.py  hyperrectanglecondition.py  rule.py  rule_functions.py  rule_utils.py
rule/activation/: activation.py
rule/rule/: rule_functions.py  rule_utils.py
ruleset/: ruleset.py
ruleskit/: __init__.py  _version.py  activation.py  condition.py  rule.py  ruleset.py  thresholds.py
ruleskit/activation/: activation.py
ruleskit/condition/: condition.py  hyperrectanglecondition.py
ruleskit/logger/: logger.py
ruleskit/rule/: rule.py  rule_utils.py
ruleskit/ruleset/: ruleset.py
ruleskit/utils/: rfunctions.py  rule_utils.py
tests/unit/: conftest.py  test_activation.py  test_condition.py  test_rfunctions.py  test_rule.py  test_rule_utils.py  test_ruleset.py  test_thresholds.py
tests/unit/data/: a1.txt  a1_activation_init_bitarray.csv  a1_activation_init_bitarray_after_calls.csv  a1_activation_init_compressed_array.csv  a1_activation_init_compressed_str_after_calls.csv  a1_activation_init_file.csv  a1_activation_init_file_after_calls.csv  a1_activation_init_integer.csv  a1_activation_init_integer_after_calls.csv  a1_activation_init_raw.csv  a2.txt  ruleset_test.csv  (+12 more)
