[metadata]
name = ruleskit
description = Generic rule package for rule-based algorithms
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Advestis/ruleskit
author = P.Cotte & V.Margot
author_email = pythondev@advestis.com
license = GPLv3
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: Unix
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
project_urls =
    Bug Tracker = https://github.com/Advestis/ruleskit/issues
    Documentation = https://advestis.github.io/ruleskit
    Source Code = https://github.com/Advestis/ruleskit/

[options]
packages = find:
install_requires =
    numpy
    pytest
    scikit-learn
    bitarray
    psutil
    pandas
python_requires = >=3.7
include_package_data = True

[options.packages.find]
include = ruleskit

[versioneer]
VCS = git
style = pep440
versionfile_source = ruleskit/_version.py
versionfile_build = ruleskit/_version.py
tag_prefix = v
parentdir_prefix = ruleskit-